# Grindstone

./: .gitignore  README.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  BONES.md  PLANNER_CONTRACT.md
grindstone/: __init__.py  __main__.py  check_decision.py  check_handoff.py  cli.py  config.py  domain_skills.py  duration.py  epoch_loop.py  events.py  infra.py  journal.py  loop.py  memory.py  mock_planner.py  mock_worker.py  planner.py  prepare.py  reaper.py  repo_map.py  repomap.py  run_loop.py  rundir.py  script_planner.py  script_polish.py  script_vision.py  script_worker.py  strategy_skill.py  strikes.py  task_loop.py  tui.py  verify.py  worker.py  worktree.py
grindstone/_repomap_queries/: ATTRIBUTION.md
grindstone/contracts/: __init__.py  gate.py  models.py  semantics.py
models/: _timeout_prefix.sh  codex_polish.sh  local_request.sh  planner_request.sh  senior_request.sh  stop.sh  vision_review.sh
models/_common/: _handoff_guarantee.sh
models/claude/: planner_request.sh  senior_request.sh  worker_request.sh
models/codex/: planner_request.sh  senior_request.sh
models/default/: local_request.sh  planner_request.sh  senior_request.sh  stop.sh
models/local/: planner_request.sh  senior_request.sh  worker_request.sh
schemas/: epoch_decision.json  epoch_verdict.json  handoff.json  verdict.json  vision_verdict.json
skills/operating/planner/: plan_epoch.md  plan_skeleton.md  repair_epoch.md
skills/operating/worker/: artifact.md  implement.md  research.md  review.md
tests/grindstone/: _kill_phase_target.py  _kill_planner_target.py  _kill_target.py  conftest.py  mock_planner.py  mock_worker.py  test_check_decision.py  test_check_handoff.py  test_cli.py  test_cli_init_config.py  test_config.py  test_contracts.py  test_contracts_equivalence.py  test_contracts_semantics.py  test_domain_skills.py  test_e2e_gate_rebalance.py  test_e2e_pipelines.py  test_epoch_loop.py  test_epoch_verification.py  test_events.py  test_failed_epoch.py  test_final_polish.py  test_fuzz.py  test_fuzz_run.py  test_infra_repair.py  test_journal.py  test_loop.py  test_memory.py  test_mocks.py  test_phases.py  test_planner.py  test_prepare.py  test_real_gate.py  test_real_gate_s3.py  test_real_gate_s4.py  test_real_gate_s5.py  test_reaper.py  test_repo_map.py  test_repomap.py  test_resume.py  (+15 more)
tests/grindstone/corpus/decision/invalid/: bad_log_key_dotdot.json  bad_schema_version.json  extra_property.json  handle_failed_epoch_missing_hint.json  handle_failed_epoch_mixed_action.json  implement_missing_ownership.json  nine_tasks.json  phase_complete_empty_deliverables.json  skeleton_one_phase.json  unknown_tool.json  vision_review_extra_key.json
tests/grindstone/corpus/decision/valid/: artifact.json  complete_run.json  escalate_run.json  handle_failed_epoch_escalate.json  handle_failed_epoch_halt.json  handle_failed_epoch_retry.json  implement.json  implement_content_grep.json  implement_criteria.json  implement_duplicate_ids.json  implement_overlapping_ownership.json  implement_unknown_input.json  phase_complete.json  propose_skeleton.json  research.json  review.json  review_missing_targets.json  revise_phases.json  revise_reuse_completed.json  vision_review_exit_criterion.json
tests/grindstone/corpus/handoff/invalid/: bad_schema_version.json  bad_status.json  bad_task_id.json  downstream_needs_bad_pattern.json  extra_property.json  missing_occupancy.json  what_changed_string.json  (+1 more)
tests/grindstone/eval/: README.md  _assertions.py  _boundary.py  _oracle.py  _task.py  _worker.py  conftest.py  test_assertions.py  test_boundary_select.py  test_e2e_local_todo.py  test_eval_boundary.py  test_eval_task.py  test_planner_eval.py  test_worker_eval.py
tests/models/: test_scripts.py
(+3 files in other folders)
