[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# The `real` marker tags rung gates that exercise live infrastructure
# (llama-server workers on :8080/:8082, the codex exec planner). Excluded
# from the default unit suite; run via `pytest tests/grindstone -m real`.
addopts = "-q --tb=short -m 'not real'"
markers = [
    "real: rung gate against live workers/planner (excluded by default)",
]

[project]
name = "grindstone"
version = "0.1.0"
description = "Epoch-based deep-work orchestrator: a strong cloud planner proposes one verifiable epoch at a time, local workers grind, and deterministic checks plus disk contracts gate everything."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shubham Yadav" }]
keywords = ["orchestrator", "agents", "llm", "codegen", "state-machine"]
dependencies = [
    "jsonschema>=4.26",
    "pydantic>=2",
    "pyyaml>=6",
    "rich>=13",
]

# The `grindstone` command. An editable install (`pip install -e .`) puts this on
# PATH so the CLI runs from ANY cwd, crucially from the target repo, not just a
# checkout of this package. `main` reads sys.argv and returns the process exit code.
[project.scripts]
grindstone = "grindstone.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Run-from-clone / editable install: the package resolves models/ + schemas/
# relative to the repo root (siblings of the grindstone package), so use
# `pip install -e .` from a checkout rather than a copy install.
packages = ["grindstone", "grindstone.contracts"]
