[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# The `real` marker tags rung gates that exercise live infrastructure
# (llama-server workers on :8080/:8082, the codex exec planner). The `eval`
# marker tags the behavioral planner eval corpus (tests/grindstone/eval/): it
# drives a REAL model through a rig and asserts PROPERTIES (bands, not goldens)
# of the decisions. Both are slow + need live endpoints, so both are excluded
# from the default unit suite; run the eval corpus via
# `GRINDSTONE_EVAL_RIG=local pytest tests/grindstone/eval -m eval`.
addopts = "-q --tb=short -m 'not real and not eval'"
markers = [
    "real: rung gate against live workers/planner (excluded by default)",
    "eval: behavioral planner eval against a live rig (excluded by default)",
]

[project]
name = "grindstone"
version = "0.1.0"
description = "Epoch-based deep-work orchestrator: a strong cloud planner proposes one verifiable epoch at a time, local workers grind, and deterministic checks plus disk contracts gate everything."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shubham Yadav" }]
keywords = ["orchestrator", "agents", "llm", "codegen", "state-machine"]
dependencies = [
    "jsonschema>=4.26",
    "pydantic>=2",
    "pyyaml>=6",
    "rich>=13",
]

# The `grindstone` command. An editable install (`pip install -e .`) puts this on
# PATH so the CLI runs from ANY cwd, crucially from the target repo, not just a
# checkout of this package. `main` reads sys.argv and returns the process exit code.
[project.scripts]
grindstone = "grindstone.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Run-from-clone / editable install: the package resolves models/ + schemas/
# relative to the repo root (siblings of the grindstone package), so use
# `pip install -e .` from a checkout rather than a copy install.
packages = ["grindstone", "grindstone.contracts"]
